--- a/web/view/user/userShoppingAdd.html
+++ b/web/view/user/userShoppingAdd.html
@@ -57,6 +57,28 @@ $(document).ready(function() {
                         </div>
                     </div>
 
+                    <div id="actionStateBox">
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="actionState_${num}" value="1" checked>
+                                <label class="form-check-label" for="exampleRadios1">
+                                    購物
+                                </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="actionState_${num}" value="2">
+                                <label class="form-check-label" for="exampleRadios2">
+                                    維修
+                                </label>
+                        </div>
+                        <div class="form-check">
+                            <input class="form-check-input" type="radio" name="actionState_${num}" value="3">
+                                <label class="form-check-label" for="exampleRadios3">
+                                    非金錢往來行為
+                                </label>
+                </div>
+                    </div>
+
+
                 </div>
 
                 <div class="box-footer" style="text-align: right;">
@@ -207,6 +229,26 @@ $(document).ready(function() {
                                         </div>
                                     </div>
 
+                                    <div id="actionStateBox">
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="actionState_0" value="1" checked>
+                                                <label class="form-check-label" for="exampleRadios1">
+                                                    購物
+                                                </label>
+                                            </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="actionState_0" value="2">
+                                                <label class="form-check-label" for="exampleRadios2">
+                                                    維修
+                                                </label>
+                                        </div>
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="radio" name="actionState_0" value="3">
+                                                <label class="form-check-label" for="exampleRadios3">
+                                                    非金錢往來行為
+                                                </label>
+                                </div>
+                                    </div>
                                 </div>
 
                                 <!--box-footer-->
