user: FInish coupon function except edit view

--- a/web/view/common/menu.html
+++ b/web/view/common/menu.html
@@ -59,11 +59,11 @@
                                 <a href="../controller/frameController.php?action=frameList">
                                     <i class="fa fa-tripadvisor"></i> 鏡框檢視/修改</a>
                             </li>
-                            <li>    
+                            <li>
                                 <a href="../controller/combineController.php?action=combineAddPrepare">
                                     <i class="fa fa-gift"></i> 組合商品新增</a>
                             </li>
-                            <li>    
+                            <li>
                                 <a href="../controller/combineController.php?action=combineList">
                                     <i class="fa fa-gift"></i> 組合商品檢視/修改</a>
                             </li>
@@ -277,29 +277,51 @@
                         <ul class="treeview-menu">
                             <li>
                                 <a href="../controller/tryOnController.php?action=tryOnAddPrepare">
-                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡新增</a>
+                                    <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡新增</a>
                             </li>
                             <li>
                                 <a href="../controller/tryOnController.php?action=tryOnList">
-                                <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡檢視/修改</a>
+                                    <i class="fa fa-thumbs-o-up"></i>APP試戴眼鏡檢視/修改</a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#">
-                                <i class="fa fa-align-justify"></i>APP跑馬燈管理
-                                <i class="fa fa-angle-down pull-right"></i>
+                            <i class="fa fa-align-justify"></i>APP跑馬燈管理
+                            <i class="fa fa-angle-down pull-right"></i>
                         </a>
                         <ul class="treeview-menu">
                             <li>
                                 <a href="../controller/scrollController.php?action=scrollAddPrepare">
-                                <i class="fa fa-mobile"></i>APP跑馬燈新增</a>
+                                    <i class="fa fa-mobile"></i>APP跑馬燈新增</a>
                             </li>
                             <li>
                                 <a href="../controller/scrollController.php?action=scrollList">
-                                <i class="fa fa-mobile"></i>APP跑馬燈檢視/修改</a>
+                                    <i class="fa fa-mobile"></i>APP跑馬燈檢視/修改</a>
                             </li>
                         </ul>
+                    </li>
+                </ul>
+            </li>
+
+            <li>
+                <a href="#">
+                    <i class="fa fa-th-list"></i>
+                    <span>訊息or折價卷管理</span>
+                    <i class="fa fa-angle-down pull-right"></i>
+                </a>
+                <ul class="treeview-menu">
+                    <li>
+                        <a href="../controller/couponController.php?action=couponAddPrepare">
+                            <i class="fa fa-user"></i>訊息or折價卷新增</a>
+                    </li>
+                    <li>
+                        <a href="../controller/couponController.php?action=couponList">
+                            <i class="fa fa-shopping-cart"></i>折價卷檢視/修改</a>
+                    </li>
+                    <li>
+                        <a href="../controller/couponController.php?action=infoList">
+                            <i class="fa fa-shopping-cart"></i>訊息檢視/修改</a>
                     </li>
                 </ul>
             </li>
