user: Finish all coupon function

--- a/web/view/coupon/infoList.html
+++ b/web/view/coupon/infoList.html
@@ -86,7 +86,7 @@
                                             <td>\{$info.endTime\}</td>
                                             <td>\{$info.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="">
+                                                <a href="../controller/couponController.php?action=infoEditPrepare&couponId=\{$info.couponId\}">
                                                     <button class="btn btn-sm btn-primary">
                                                         <i class="glyphicon glyphicon-pencil"></i>
                                                     </button>
