--- a/web/view/coupon/couponList.html
+++ b/web/view/coupon/couponList.html
@@ -8,22 +8,37 @@
     <script src="../plugins/datatables/jquery.dataTables.min.js"></script>
     <script src="../plugins/datatables/dataTables.bootstrap.min.js"></script>
     <script>
-        $(function () {
-            $('#couponListTable').DataTable({
-                "columnDefs": [
-                    { "orderable": false, "targets": 1 },
-                    { "orderable": false, "targets": 2 },
-                    { "orderable": false, "targets": 4 }
-                ],
-                "paging": false,
-                "lengthChange": false,
-                "searching": false,
-                "ordering": true,
-                "info": true,
-                "autoWidth": false
-            });
-        });
+        function deleteCoupon(activityEndTime, couponId){
+            let message = new Date(activityEndTime) > Date.now() ? "活動還沒結束無法刪除": "確定要刪除嘛";
+            let action = new Date(activityEndTime) > Date.now() ? 
+                function() {}:
+                function() { location='../controller/couponController.php?action=couponDelete&couponId='+ couponId;};
+                
+            let btn =  new Date(activityEndTime) > Date.now() ?
+                        [{
+                            label: '取消',
+                            action: function(dialogItself){
+                                dialogItself.close();
+                        }
+                        }]:
+                        [{
+                            label: '確定',
+                            cssClass: 'btn-danger',
+                            action: action
+                        },{
+                            label: '取消',
+                            action: function(dialogItself){
+                                dialogItself.close();
+                        }
+                        }];
 
+                       
+            BootstrapDialog.show({
+                title:'提醒',
+                message: message,
+                buttons: btn
+            });
+        }
 
     </script>
 </head>
@@ -68,10 +83,13 @@
                                             <td>\{$coupon.endTime\}</td>
                                             <td>\{$coupon.lastUpdateTime\}</td>
                                             <td>
-                                                <a href="">
+                                                <a href="../controller/couponController.php?action=couponEditPrepare&couponId=\{$coupon.couponId\}">
                                                     <button class="btn btn-sm btn-primary">
                                                         <i class="glyphicon glyphicon-pencil"></i>
                                                     </button>
+                                                </a>
+                                                <a href="#">
+                                                     <button class="btn btn-sm btn-danger" onclick="deleteCoupon('\{$coupon.endTime\}','\{$coupon.couponId\}');"><i class="glyphicon glyphicon-remove"></i></button>
                                                 </a>
                                             </td>
                                         </tr>
