--- a/web/view/scroll/scrollAdd.html
+++ b/web/view/scroll/scrollAdd.html
@@ -73,11 +73,17 @@
                                             <textarea id="description" name="description" class="form-control" placeholder="輸入跑馬燈描述"  style= "overflow:hidden;"></textarea>
                                         </div>
                                     </div>
-                                     <div id="scrollImageDiv" class="form-group">
+                                    <div id="scrollImageDiv" class="form-group">
                                         <label class="col-sm-2 control-label">跑馬燈圖片</label>
                                         <div class="col-sm-10">
                                             <input type="file" id="scrollImage" name="scrollImage" data-input="false" accept="image/*">
                                             <img id="scrollImg" class="img-thumbnail" style="display:none">
+                                        </div>
+                                    </div>
+                                    <div id="scrollLinkDiv" class="form-group">
+                                        <label class="col-sm-2 control-label">圖片連結</label>
+                                        <div class="col-sm-10">
+                                            <input id="scrollLink" name="scrollLink" class="form-control" placeholder="輸入圖片連結">
                                         </div>
                                     </div>
                                 </div>
