--- a/web/view/scroll/scrollList.html
+++ b/web/view/scroll/scrollList.html
@@ -27,7 +27,7 @@
     function deletescroll(scrollId){
         BootstrapDialog.show({
             title:'提醒',
-            message: '確定刪除風格嗎?可能會造成部分眼鏡沒有風格分類',
+            message: '確定刪除跑馬燈嗎?',
             buttons: [{
                 label: '確定',
                 cssClass: 'btn-danger',
@@ -74,6 +74,7 @@
                                             <th>跑馬燈名稱</th>
                                             <th>跑馬燈描述</th>
                                             <th>使用圖片</th>
+                                            <th>圖片連結</th>
                                             <th>操作選項</th>
                                         </tr>
                                     </thead>
@@ -83,6 +84,7 @@
                                             <td>\{$scroll.scrollName\}</td>
                                             <td>\{$scroll.description\}</td>
                                             <td><img src="\{$scroll.path\}" alt="尚未上傳圖片" width="350px"></td>
+                                            <td>\{$scroll.link\}</td>
                                             <td>
                                                 <a href="#">
                                                     <button class="btn btn-sm btn-danger" onclick="deletescroll('\{$scroll.scrollId\}');"><i class="glyphicon glyphicon-remove"></i></button>
